# chem-pipe

./: .gitignore  README.md  config.example.toml  config.toml~  config_example.toml  fine_tune.sh  output.out  pipeline.sh  potential.sh  pyproject.toml  requirements.txt  run_pipeline.sh  status.json  vasp.sh
scripts/: fine_tune.sh  potential.sh  vasp.sh
src/chempipe/: __main__.py  config.py  fine_tune.py  potential.py  relax.py  submission.py  vasp.py
