[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chempipe"
version = "0.0.1"
authors = [{ name = "Avery Hill", email = "ahill15@tulane.edu" }]
description = "A chemical pipeline for accelerated atomic simulations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SiliconScientist/chem-pipe"
"Bug Tracker" = "https://github.com/SiliconScientist/chem-pipe/issues"
